--- a/21_Node.js/lockfileVersion-issue/nexss-blog.html
+++ b/21_Node.js/lockfileVersion-issue/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Our Free Packages - Introduction"
-permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
+title: "BLOG Node.js - LockfileVersion Issue"
+permalink: /21_Node.js/lockfileVersion-issue/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
 </script>
 
   <title>
-    BLOG Our Free Packages - Introduction
+    BLOG Node.js - LockfileVersion Issue
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="Introduction - Nexss Programmer Blog">
+  <meta name="description" content="LockfileVersion Issue - Nexss Programmer Blog">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Our Free Packages - Introduction">
+  <meta property="og:description" content="BLOG Node.js - LockfileVersion Issue">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -51,18 +51,18 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
             </li>
                         <!-- <li class="hideSmall">
                 <i class="fa fa-map-marker"></i>
-                86-005, Prądki, Polska
+                86-005, Prądki, Poland
             </li> -->
 
         </ul>
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/969_Our-free-packages/introduction/nexss-blog.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/21_Node.js/lockfileVersion-issue/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/969_Our-free-packages/introduction/nexss-blog.html">PL</a>
+                <a class="selected" href="/pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -81,23 +81,23 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
     <div class="nav clearfix">
         <ul>
     <li>
-        <a href="pl/index.html#services">usługi</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="pl/nexss-blog.html"><strong>blog</strong></a>
+        <a href="nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="pl/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
         <div class="btn__wrap__center">
-            <a href="pl/latwa-instalacja-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -107,18 +107,18 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
     <div class="phone_nav">
         <ul>
     <li>
-        <a href="pl/index.html#services">usługi</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="pl/nexss-blog.html"><strong>blog</strong></a>
+        <a href="nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="pl/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
@@ -147,40 +147,55 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
       <div class="column1">
                 <h3>Welcome</h3>
         <ul>
-                    <li><a href="pl/0_Welcome/news/nexss-blog.html">News </a></li>
+                    <li><a href="0_Welcome/news/nexss-blog.html">News </a></li>
                   </ul>
                 <h3>Nexss Programmer</h3>
         <ul>
-                    <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
+                    <li><a href="11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
+                    <li><a href="11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
-                    <li><a href="pl/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
-                    <li><a href="pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
+                    <li><a href="21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
+                    <li><a class="active" href="21_Node.js/lockfileVersion-issue/nexss-blog.html"><strong>LockfileVersion Issue</strong> </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
-                    <li><a href="pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
-                    <li><a href="pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
+                    <li><a href="369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Natron</h3>
         <ul>
-                    <li><a href="pl/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
-                    <li><a class="active" href="pl/969_Our-free-packages/introduction/nexss-blog.html"><strong>Introduction</strong> </a></li>
-                    <li><a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
-                    <li><a href="pl/969_Our-free-packages/@nexsspos/nexss-blog.html">@nexsspos </a></li>
+                    <li><a href="969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
+                    <li><a href="969_Our-free-packages/@nexsspos/nexss-blog.html">@nexsspos </a></li>
                   </ul>
               </div>
       <div class="column2">
-        <h1>Our Free Packages - Introduction</h1>
-<p>We are creating Open Source packages which you can use with your own projects.</p>
-<hr>
-<p>Here you can find the whole list: <a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Nexss's Free/Open Source packages.</a></p>
+        <h1>lockfileVersion issues</h1>
+<h2>Issue</h2>
+<p><strong>npm</strong> introduced new <strong>package-lock.json</strong> versions with the <strong>lockfileVersion</strong>. When user has different version of npm, which package was created can ends up with git diffs and unnecessary issues.</p>
+<p>From <strong>npmjs.com</strong> about lockfileVersion:
+<br>
+"No version provided: an "ancient" shrinkwrap file from a version of npm prior to npm v5.</p>
+<ul>
+<li><strong>lockfileVersion:1</strong> The lockfile version used by <strong>npm v5</strong> and <strong>v6</strong>.</li>
+<li><strong>lockfileVersion:2</strong> The lockfile version used by <strong>npm v7</strong>, which is backwards compatible to v1 lockfiles.</li>
+<li><strong>lockfileVersion:3</strong> The lockfile version used by <strong>npm v7</strong>, <em>without backwards compatibility</em> affordances. This is used for the hidden lockfile at _node<em>modules/.package-lock.json</em>, and will likely be used in a future version of npm, once support for npm v6 is no longer relevant."</li>
+</ul>
+<pre><code class="language-json">- "lockfileVersion": 1
++ "lockfileVersion": 2
++ "required": true</code></pre>
+<h2>Solution</h2>
+<p>To avoid modifying package-lock.json lockfileVersion field, use <strong>npm install --no-save</strong></p>
+<pre><code class="language-sh"># Will NOT overwrite org package-lock.json file
+npm install --no-save</code></pre>
+<p>more about <strong>lockfileVersion</strong>: <a href="https://docs.npmjs.com/cli/v7/configuring-npm/package-lock-json#lockfileversion">lockfileVersion on npmjs.com</a></p>
       </div>
     </div>
   </div>
@@ -257,14 +272,14 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
     
     <section class="ft-main">
       <div class="ft-main-item">
-        <h4 class="ft-title">O nas</h4>
+        <h4 class="ft-title">About</h4>
         <ul>
-          <li><a href="pl/index.html#services">Usługi</a></li>
-          <li><a class="career" href="pl/nexss-kariera.html">Career</a>
+          <li><a href="index.html#services">Services</a></li>
+          <li><a class="career" href="nexss-career.html">Career</a>
 </li>
-          <li><a href="pl/nexss-portfolio.html">Portfolio</a>
+          <li><a href="nexss-portfolio.html">Portfolio</a>
 </li>
-          <li><a href="pl/faq-najczesciej-zadawane-pytania.html">FAQ</a>
+          <li><a href="faq.html">FAQ</a>
 </li>
           <li></li>
         </ul>
@@ -272,60 +287,60 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
       <div class="ft-main-item">
         <h4 class="ft-title">Nexss Programmer</h4>
         <ul>
-          <li><a title="Nexss Programmer - Prezentacja wideo" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Prezentacja wideo</a></li>
-          <li><a href="pl/latwa-instalacja-nexss-programmer.html">Instalacja</a>
+          <li><a title="Nexss Programmer - Video Presentation" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Video Presentation</a></li>
+          <li><a href="easy-install-nexss-programmer.html">Install</a>
 </li>
           <li>
-            <a href="pl/nexss-programmer-jezyki-programowania.html">Obsługiwane języki programowania</a>
+            <a href="nexss-programming-languages.html">Supported programming languages</a>
 
           </li>
           <li>
-            <a href="pl/nexss-programmer-funkcje.html">Funkcje</a>
+            <a href="nexss-programmer-features.html">Features</a>
 
 
           </li>
           <li>
-            <a href="pl/programmer.html">Dokumentacja</a>
+            <a href="programmer.html">Documentation</a>
 
           </li>
           <li>
-            <a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Pakiety</a>
+            <a href="969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
 
           </li>
           <li>
-            <a href="pl/fund.html">Fund</a>
+            <a href="fund.html">Fund</a>
 
           </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Nauka</h4>
+        <h4 class="ft-title">Learn</h4>
         <ul>
-          <li><a href="pl/nexss-blog.html"><strong>Blog</strong></a>
+          <li><a href="nexss-blog.html"><strong>Blog</strong></a>
 </li>
-          <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
 </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Kontakt</h4>
+        <h4 class="ft-title">Contact</h4>
         <ul>
-          <li><a href="pl/index.html#contacts">Kontakt</a></li>
+          <li><a href="index.html#contacts">Contact</a></li>
           <li>
-            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Wycena projektu</a></h5>
+            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Get a Quote</a></h5>
           </li>
           <li><a href="mailto:hello@nexss.com">
               hello@nexss.com</a></li>
           <!-- <li>
-                    <a href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
                   </li>
                   <li>
-                    <a href="pl/regulamin.html">Regulamin</a>
+                    <a href="terms-and-conditions.html">Terms and Conditions</a>
                   </li> -->
           <li>
-            <a href="pl/fund.html">Fund</a>
+            <a href="fund.html">Fund</a>
 
           </li>
           <li></li>
@@ -334,7 +349,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
           </section>
     <ul>
       <li>
-        <strong class="btn__green" style="padding:10px;border-radius: 12px;">WYCENA PROJEKTU <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
+        <strong class="btn__green" style="padding:10px;border-radius: 12px;">GET A QUOTE <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
             hello@nexss.com</a></strong>
       </li>
     </ul>
@@ -350,8 +365,8 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
     Copyright © 2008 - 2021 Nexss.com, Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg">
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
-    <b>Nexss.com</b> używa ciasteczka do rejestrowania danych statystycznych.<br>
-    Więcej tutaj: <a style="color:yellow;" target="_blank" href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
+    More here: <a style="color:yellow;" target="_blank" href="privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
