--- a/969_Our-free-packages/@nexsspos/nexss-blog.html
+++ b/969_Our-free-packages/@nexsspos/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Our Free Packages - Introduction"
-permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
+title: "BLOG Our Free Packages - @nexsspos"
+permalink: /969_Our-free-packages/@nexsspos/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
 </script>
 
   <title>
-    BLOG Our Free Packages - Introduction
+    BLOG Our Free Packages - @nexsspos
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="Introduction - Nexss Programmer Blog">
+  <meta name="description" content="@nexsspos - Nexss Programmer Blog">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Our Free Packages - Introduction">
+  <meta property="og:description" content="BLOG Our Free Packages - @nexsspos">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -51,18 +51,18 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
             </li>
                         <!-- <li class="hideSmall">
                 <i class="fa fa-map-marker"></i>
-                86-005, Prądki, Polska
+                86-005, Prądki, Poland
             </li> -->
 
         </ul>
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/969_Our-free-packages/introduction/nexss-blog.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/969_Our-free-packages/@nexsspos/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/969_Our-free-packages/introduction/nexss-blog.html">PL</a>
+                <a class="selected" href="/pl/969_Our-free-packages/@nexsspos/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -81,23 +81,23 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
     <div class="nav clearfix">
         <ul>
     <li>
-        <a href="pl/index.html#services">usługi</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="pl/nexss-blog.html"><strong>blog</strong></a>
+        <a href="nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="pl/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
         <div class="btn__wrap__center">
-            <a href="pl/latwa-instalacja-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -107,18 +107,18 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
     <div class="phone_nav">
         <ul>
     <li>
-        <a href="pl/index.html#services">usługi</a>
+        <a href="index.html#services">services</a>
     </li>
     <li>
-        <a class="career" href="pl/nexss-kariera.html">Kariera</a>
+        <a class="career" href="nexss-career.html">career</a>
 
     </li>
     <li>
-        <a href="pl/nexss-blog.html"><strong>blog</strong></a>
+        <a href="nexss-blog.html"><strong>blog</strong></a>
 
     </li>
     <li>
-        <a href="pl/nexss-portfolio.html">portfolio</a>
+        <a href="nexss-portfolio.html">portfolio</a>
 
     </li>
 </ul>
@@ -147,40 +147,88 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
       <div class="column1">
                 <h3>Welcome</h3>
         <ul>
-                    <li><a href="pl/0_Welcome/news/nexss-blog.html">News </a></li>
+                    <li><a href="0_Welcome/news/nexss-blog.html">News </a></li>
                   </ul>
                 <h3>Nexss Programmer</h3>
         <ul>
-                    <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
+                    <li><a href="11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
+                    <li><a href="11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
-                    <li><a href="pl/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
-                    <li><a href="pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
+                    <li><a href="21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
+                    <li><a href="21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
-                    <li><a href="pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
-                    <li><a href="pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
+                    <li><a href="369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Natron</h3>
         <ul>
-                    <li><a href="pl/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
+                    <li><a href="639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
-                    <li><a class="active" href="pl/969_Our-free-packages/introduction/nexss-blog.html"><strong>Introduction</strong> </a></li>
-                    <li><a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
-                    <li><a href="pl/969_Our-free-packages/@nexsspos/nexss-blog.html">@nexsspos </a></li>
+                    <li><a href="969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
+                    <li><a class="active" href="969_Our-free-packages/@nexsspos/nexss-blog.html"><strong>@nexsspos</strong> </a></li>
                   </ul>
               </div>
       <div class="column2">
-        <h1>Our Free Packages - Introduction</h1>
-<p>We are creating Open Source packages which you can use with your own projects.</p>
-<hr>
-<p>Here you can find the whole list: <a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Nexss's Free/Open Source packages.</a></p>
+        <h1>@nexssp/os</h1>
+<pre><code class="language-sh">!npm i @nexssp/os -g # global installation so you can use nexssp-os everywere</code></pre>
+<h2>Usage as a cli tool - nexssp-os</h2>
+<h3>nexssp-os env</h3>
+<pre><code class="language-sh">nexssp-os env # after installing with -g flag
+
+npx @nexssp/os env # OR nexssp-os env OR nexss -env - it's without installing</code></pre>
+<h4>Windows</h4>
+<pre><code class="language-txt">OS Information
+Windows version:         Microsoft Windows [Version 10.0.19043.1288]
+Search command:          scoop search
+Install command:         scoop install
+Update command:          scoop update
+Uninstall command:       scoop uninstall
+Tags:                    WINDOWS, WINDOWS10, WINDOWS100 (to use in a distro recognition)</code></pre>
+<h4>Linux</h4>
+<pre><code class="language-txt">OS Information
+Linux distribution:      Ubuntu
+Linux version os.v():    18.04
+Search command:          apt-cache search
+Install command:         apt-get install -y
+Update command:          apt-get update -y
+Uninstall command:       apt-get remove -y
+Tags:                    UBUNTU, UBUNTU18, UBUNTU1804 (to use in a distro recognition)</code></pre>
+<h3>nexssp-os where</h3>
+<pre><code class="language-sh">nexssp-os where git # will display path of the git</code></pre>
+<h3>nexssp-os install, uninstall, update, search &lt;package&gt;</h3>
+<pre><code class="language-sh">nexssp-os install git # will install git. Package manager is choosed automatically
+nexssp-os install git --dry # will only display command for the os eg apt-get install -y git
+
+# update, uninstall and search the same as above</code></pre>
+<h3>nexssp-os get</h3>
+<p>with <strong>--json</strong> flag will return json
+with passed field will return only value for this field.</p>
+<pre><code class="language-json">{
+  "DISTRIB_ID": "Ubuntu",
+  "DISTRIB_RELEASE": "18.04",
+  "DISTRIB_CODENAME": "bionic",
+  "DISTRIB_DESCRIPTION": "Ubuntu 18.04.5 LTS",
+  "NAME": "Ubuntu",
+  "VERSION": "18.04.5 LTS (Bionic Beaver)",
+  "ID": "ubuntu",
+  "ID_LIKE": "debian",
+  "PRETTY_NAME": "Ubuntu 18.04.5 LTS",
+  "VERSION_ID": "18.04",
+  "HOME_URL": "https://www.ubuntu.com/",
+  "SUPPORT_URL": "https://help.ubuntu.com/",
+  "BUG_REPORT_URL": "https://bugs.launchpad.net/ubuntu/",
+  "PRIVACY_POLICY_URL": "https://www.ubuntu.com/legal/terms-and-policies/privacy-policy",
+  "VERSION_CODENAME": "bionic",
+  "UBUNTU_CODENAME": "bionic"
+}</code></pre>
       </div>
     </div>
   </div>
@@ -257,14 +305,14 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
     
     <section class="ft-main">
       <div class="ft-main-item">
-        <h4 class="ft-title">O nas</h4>
+        <h4 class="ft-title">About</h4>
         <ul>
-          <li><a href="pl/index.html#services">Usługi</a></li>
-          <li><a class="career" href="pl/nexss-kariera.html">Career</a>
+          <li><a href="index.html#services">Services</a></li>
+          <li><a class="career" href="nexss-career.html">Career</a>
 </li>
-          <li><a href="pl/nexss-portfolio.html">Portfolio</a>
+          <li><a href="nexss-portfolio.html">Portfolio</a>
 </li>
-          <li><a href="pl/faq-najczesciej-zadawane-pytania.html">FAQ</a>
+          <li><a href="faq.html">FAQ</a>
 </li>
           <li></li>
         </ul>
@@ -272,60 +320,60 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
       <div class="ft-main-item">
         <h4 class="ft-title">Nexss Programmer</h4>
         <ul>
-          <li><a title="Nexss Programmer - Prezentacja wideo" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Prezentacja wideo</a></li>
-          <li><a href="pl/latwa-instalacja-nexss-programmer.html">Instalacja</a>
+          <li><a title="Nexss Programmer - Video Presentation" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Video Presentation</a></li>
+          <li><a href="easy-install-nexss-programmer.html">Install</a>
 </li>
           <li>
-            <a href="pl/nexss-programmer-jezyki-programowania.html">Obsługiwane języki programowania</a>
+            <a href="nexss-programming-languages.html">Supported programming languages</a>
 
           </li>
           <li>
-            <a href="pl/nexss-programmer-funkcje.html">Funkcje</a>
+            <a href="nexss-programmer-features.html">Features</a>
 
 
           </li>
           <li>
-            <a href="pl/programmer.html">Dokumentacja</a>
+            <a href="programmer.html">Documentation</a>
 
           </li>
           <li>
-            <a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Pakiety</a>
+            <a href="969_Our-free-packages/list-of-free-packages/nexss-blog.html">Packages</a>
 
           </li>
           <li>
-            <a href="pl/fund.html">Fund</a>
+            <a href="fund.html">Fund</a>
 
           </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Nauka</h4>
+        <h4 class="ft-title">Learn</h4>
         <ul>
-          <li><a href="pl/nexss-blog.html"><strong>Blog</strong></a>
+          <li><a href="nexss-blog.html"><strong>Blog</strong></a>
 </li>
-          <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <li><a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
 </li>
           <li></li>
         </ul>
       </div>
       <div class="ft-main-item">
-        <h4 class="ft-title">Kontakt</h4>
+        <h4 class="ft-title">Contact</h4>
         <ul>
-          <li><a href="pl/index.html#contacts">Kontakt</a></li>
+          <li><a href="index.html#contacts">Contact</a></li>
           <li>
-            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Wycena projektu</a></h5>
+            <h5><a style="color:#00ff90;" href="mailto:hello@nexss.com">Get a Quote</a></h5>
           </li>
           <li><a href="mailto:hello@nexss.com">
               hello@nexss.com</a></li>
           <!-- <li>
-                    <a href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
                   </li>
                   <li>
-                    <a href="pl/regulamin.html">Regulamin</a>
+                    <a href="terms-and-conditions.html">Terms and Conditions</a>
                   </li> -->
           <li>
-            <a href="pl/fund.html">Fund</a>
+            <a href="fund.html">Fund</a>
 
           </li>
           <li></li>
@@ -334,7 +382,7 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
           </section>
     <ul>
       <li>
-        <strong class="btn__green" style="padding:10px;border-radius: 12px;">WYCENA PROJEKTU <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
+        <strong class="btn__green" style="padding:10px;border-radius: 12px;">GET A QUOTE <a href="mailto:hello@nexss.com"><i class="fa fa-hand-o-right"></i>
             hello@nexss.com</a></strong>
       </li>
     </ul>
@@ -350,8 +398,8 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
     Copyright © 2008 - 2021 Nexss.com, Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg">
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
-    <b>Nexss.com</b> używa ciasteczka do rejestrowania danych statystycznych.<br>
-    Więcej tutaj: <a style="color:yellow;" target="_blank" href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
+    More here: <a style="color:yellow;" target="_blank" href="privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
