--- a/pl/21_Node.js/lockfileVersion-issue/nexss-blog.html
+++ b/pl/21_Node.js/lockfileVersion-issue/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Our Free Packages - Introduction"
-permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
+title: "BLOG Node.js - LockfileVersion Issue"
+permalink: /pl/21_Node.js/lockfileVersion-issue/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
 </script>
 
   <title>
-    BLOG Our Free Packages - Introduction
+    BLOG Node.js - LockfileVersion Issue
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="Introduction - Nexss Programmer Blog">
+  <meta name="description" content="LockfileVersion Issue - Nexss Programmer Blog">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Our Free Packages - Introduction">
+  <meta property="og:description" content="BLOG Node.js - LockfileVersion Issue">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -58,11 +58,11 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/969_Our-free-packages/introduction/nexss-blog.html">EN</a>
+                <a href="/en/21_Node.js/lockfileVersion-issue/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/969_Our-free-packages/introduction/nexss-blog.html">PL</a>
+                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -158,7 +158,7 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
                 <h3>Node.js</h3>
         <ul>
                     <li><a href="pl/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
-                    <li><a href="pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
+                    <li><a class="active" href="pl/21_Node.js/lockfileVersion-issue/nexss-blog.html"><strong>LockfileVersion Issue</strong> </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
@@ -171,16 +171,31 @@ permalink: /pl/969_Our-free-packages/introduction/nexss-blog.html
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
-                    <li><a class="active" href="pl/969_Our-free-packages/introduction/nexss-blog.html"><strong>Introduction</strong> </a></li>
+                    <li><a href="pl/969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
                     <li><a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
                     <li><a href="pl/969_Our-free-packages/@nexsspos/nexss-blog.html">@nexsspos </a></li>
                   </ul>
               </div>
       <div class="column2">
-        <h1>Our Free Packages - Introduction</h1>
-<p>We are creating Open Source packages which you can use with your own projects.</p>
-<hr>
-<p>Here you can find the whole list: <a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Nexss's Free/Open Source packages.</a></p>
+        <h1>lockfileVersion issues</h1>
+<h2>Issue</h2>
+<p><strong>npm</strong> introduced new <strong>package-lock.json</strong> versions with the <strong>lockfileVersion</strong>. When user has different version of npm, which package was created can ends up with git diffs and unnecessary issues.</p>
+<p>From <strong>npmjs.com</strong> about lockfileVersion:
+<br>
+"No version provided: an "ancient" shrinkwrap file from a version of npm prior to npm v5.</p>
+<ul>
+<li><strong>lockfileVersion:1</strong> The lockfile version used by <strong>npm v5</strong> and <strong>v6</strong>.</li>
+<li><strong>lockfileVersion:2</strong> The lockfile version used by <strong>npm v7</strong>, which is backwards compatible to v1 lockfiles.</li>
+<li><strong>lockfileVersion:3</strong> The lockfile version used by <strong>npm v7</strong>, <em>without backwards compatibility</em> affordances. This is used for the hidden lockfile at _node<em>modules/.package-lock.json</em>, and will likely be used in a future version of npm, once support for npm v6 is no longer relevant."</li>
+</ul>
+<pre><code class="language-json">- "lockfileVersion": 1
++ "lockfileVersion": 2
++ "required": true</code></pre>
+<h2>Solution</h2>
+<p>To avoid modifying package-lock.json lockfileVersion field, use <strong>npm install --no-save</strong></p>
+<pre><code class="language-sh"># Will NOT overwrite org package-lock.json file
+npm install --no-save</code></pre>
+<p>more about <strong>lockfileVersion</strong>: <a href="https://docs.npmjs.com/cli/v7/configuring-npm/package-lock-json#lockfileversion">lockfileVersion on npmjs.com</a></p>
       </div>
     </div>
   </div>
