--- a/21_Node.js/module_alias/nexss-blog.html
+++ b/21_Node.js/module_alias/nexss-blog.html
@@ -158,6 +158,7 @@ permalink: /21_Node.js/module_alias/nexss-blog.html
                 <h3>Node.js</h3>
         <ul>
                     <li><a class="active" href="21_Node.js/module_alias/nexss-blog.html"><strong>Module_alias</strong> </a></li>
+                    <li><a href="21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
@@ -172,6 +173,7 @@ permalink: /21_Node.js/module_alias/nexss-blog.html
         <ul>
                     <li><a href="969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
                     <li><a href="969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
+                    <li><a href="969_Our-free-packages/@nexsspos/nexss-blog.html">@nexsspos </a></li>
                   </ul>
               </div>
       <div class="column2">
