--- a/en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
+++ b/en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
@@ -158,6 +158,7 @@ permalink: /en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
                 <h3>Node.js</h3>
         <ul>
                     <li><a href="en/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
+                    <li><a href="en/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
@@ -172,6 +173,7 @@ permalink: /en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
         <ul>
                     <li><a href="en/969_Our-free-packages/introduction/nexss-blog.html">Introduction </a></li>
                     <li><a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
+                    <li><a href="en/969_Our-free-packages/@nexsspos/nexss-blog.html">@nexsspos </a></li>
                   </ul>
               </div>
       <div class="column2">
