--- a/en/969_Our-free-packages/introduction/nexss-blog.html
+++ b/en/969_Our-free-packages/introduction/nexss-blog.html
@@ -158,6 +158,7 @@ permalink: /en/969_Our-free-packages/introduction/nexss-blog.html
                 <h3>Node.js</h3>
         <ul>
                     <li><a href="en/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
+                    <li><a href="en/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
@@ -172,10 +173,11 @@ permalink: /en/969_Our-free-packages/introduction/nexss-blog.html
         <ul>
                     <li><a class="active" href="en/969_Our-free-packages/introduction/nexss-blog.html"><strong>Introduction</strong> </a></li>
                     <li><a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages </a></li>
+                    <li><a href="en/969_Our-free-packages/@nexsspos/nexss-blog.html">@nexsspos </a></li>
                   </ul>
               </div>
       <div class="column2">
-        <h1>Introduction</h1>
+        <h1>Our Free Packages - Introduction</h1>
 <p>We are creating Open Source packages which you can use with your own projects.</p>
 <hr>
 <p>Here you can find the whole list: <a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">Nexss's Free/Open Source packages.</a></p>
